# openqasm3-compiler

./: .Report.md.swp  .gitignore  CMakeLists.txt  ExternalAntlr4Cpp.cmake  README.md  TODO.md  main.cpp  test.qasm  test2.qasm
TUM_Thesis_Template_CSE - tracked/: Report.md  main.tex
TUM_Thesis_Template_CSE - tracked/bibliography/: literature.bib
TUM_Thesis_Template_CSE - tracked/chapters/: Background.tex  Body.tex  Conclusion.tex  Introduction.tex
TUM_Thesis_Template_CSE - tracked/components/: info.tex  outline.tex  quote.tex  settings.tex  text.tex
TUM_Thesis_Template_CSE - tracked/images/: pipeline.eps
cmake/: Antlr4Package.md  ExternalAntlr4Cpp.cmake  FindANTLR.cmake  README.md
dialect/include/: CMakeLists.txt
dialect/include/Quantum/: CMakeLists.txt  QuantumDialect.h  QuantumOps.h  QuantumOps.td
dialect/include/Quantum/IR/: CMakeLists.txt  QuantumDialect.h  QuantumDialect.td  QuantumOps.h  QuantumOps.td  QuantumTypes.h  QuantumTypes.td
dialect/include/Quantum/Transforms/: CMakeLists.txt  Passes.h  Passes.td
dialect/include/RestrictedQuantum/: CMakeLists.txt  RestrictedQuantumDialect.h  RestrictedQuantumDialect.td  RestrictedQuantumOps.h  RestrictedQuantumOps.td
dialect/lib/: CMakeLists.txt  Init.cpp  PassImp.h
dialect/lib/Conversion/: CMakeLists.txt  LowerToRestQuantum.cpp
dialect/lib/Quantum/: CMakeLists.txt  QuantumDialect.cpp  QuantumOps.cpp
dialect/lib/RestrictedQuantum/: CMakeLists.txt  RestrictedQuantumDialect.cpp  RestrictedQuantumOps.cpp
include/quantum-mlir/: CMakeLists.txt
include/quantum-mlir/Conversion/: CMakeLists.txt  Optimize.td  Passes.h  Passes.td
include/quantum-mlir/Dialect/Quantum/IR/: QuantumDialect.h  QuantumDialect.td  QuantumOps.h  QuantumOps.td  QuantumTypes.h  QuantumTypes.td
include/quantum-mlir/Dialect/RestrictedQuantum/IR/: CMakeLists.txt  RestrictedQuantumDialect.h  RestrictedQuantumOps.h  RestrictedQuantumOps.td
lib/: CMakeLists.txt
lib/parser/: CMakeLists.txt  Visitor.cpp  Visitor.hpp  generate.sh  mlir_generator.cpp  mlir_generator.hpp  qasm.g4  visitor.cpp  visitor.hpp
lib/parser/utils/: qasm_utils.cpp  qasm_utils.hpp  symbol_table.cpp  symbol_table.hpp
lib/parser/visitor_handlers/: classical_types_handler.cpp  conditional_handler.cpp  expression_handler.cpp  expression_handler.h  function_handler.cpp  loop_handler.cpp  measurement_handler.cpp  quantum_instruction_handler.cpp  quantum_types_handler.cpp
lib/quantum-mlir/: CMakeLists.txt  quantum-mlir.cpp
lib/quantum-mlir/Conversion/: CMakeLists.txt  ConvertToGenGate.cpp  ForwardDelcareQuantumAllocs.cpp  LowerToLLVMIR.cpp  LowerToRestQuantum.cpp  PassImp.h  QuantumSimulator.cpp
lib/quantum-mlir/Dialect/: CMakeLists.txt
lib/quantum-mlir/Dialect/Quantum/: CMakeLists.txt  QuantumDialect.cpp  QuantumOps.cpp
lib/quantum-mlir/Dialect/RestrictedQuantum/: CMakeLists.txt  RestrictedQuantumDialect.cpp  RestrictedQuantumOps.cpp
mlir/: visitor.hpp
mlir/dialect/: QuantumDialect.td  QuantumOps.td
mlir/parser/: generate.sh  qasm.g4
parser/: CMakeLists.txt  mlir_generator.cpp  mlir_generator.hpp  qasm.g4  visitor.cpp  visitor.hpp
parser/utils/: qasm_utils.cpp  qasm_utils.hpp  symbol_table.cpp  symbol_table.hpp  symbol_table2.cpp  symbol_table2.h
parser/visitor_handlers/: classical_types_handler.cpp  conditional_handler.cpp  expression_handler.cpp  expression_handler.h  function_handler.cpp  loop_handler.cpp  measurement_handler.cpp  quantum_instruction_handler.cpp  quantum_types_handler.cpp
quantum-opt/: CMakeLists.txt  headers.h  quantum-opt.cpp
tests/: while.qasm
